--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
 [options]
 packages = mip_me
 install_requires =
-    ticdat==0.2.21
+    ticdat>=0.2.21
     pandas>=0.18.1
     pulp>=2.4
     gurobipy>=9.1.2
