--- a/setup.cfg
+++ b/setup.cfg
@@ -19,5 +19,5 @@ packages = mip_me
 install_requires =
     ticdat>=0.2.21
     pandas>=0.18.1
-    gurobipy>=9.1.2
+    pulp>=2.5.1
 python_requires = >=3.6
